[BACKLOG-41283]-Upgrading Pentaho kettle from Java EE 9 to Jakarta EE 10 (#9656)